# welinker

./: .gitignore  Cargo.toml  README.md  build.rs  install.sh
.github/workflows/: release.yml
Formula/: welinker.rb
docs/: README.zh-CN.md
scripts/: install-homebrew.sh
src/: main.rs
src/agent/: acp.rs  cli.rs  http.rs  mod.rs
src/api/: mod.rs
src/cmd/: mod.rs
src/config/: mod.rs
src/ilink/: auth.rs  client.rs  mod.rs  monitor.rs  types.rs
src/messaging/: cdn.rs  handler.rs  markdown.rs  media.rs  mod.rs
web/: index.html  package-lock.json  package.json
web/src/: main.jsx  styles.css
