[package]
name = "welinker"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1"
aes = "0.8"
async-trait = "0.1"
base64 = "0.22"
block-padding = "0.3"
bytes = "1"
cbc = "0.1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
ecb = "0.1"
futures = "0.3"
hex = "0.4"
html-escape = "0.2"
md-5 = "0.10"
mime_guess = "2"
nix = { version = "0.29", features = ["signal", "process"] }
qrcode = "0.14"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
scraper = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
which = "7"

[dev-dependencies]
tempfile = "3"
